fixed html by removing section play area as panda and boat overlaps and the game over isn´t working properfly we added some console log to fixed the issue into the collision detecion later we will start to fixed the win function as pand didnt reach the goalyet

--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,6 @@ body {
   overflow: hidden;
 }
 
-.game section {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border-top: 2px solid #0288d1;
-  border-bottom: 2px solid #0288d1;
-  overflow: hidden;
-}
-
 header {
   padding: 10px;
   font-size: 18px;
@@ -48,8 +39,8 @@ header {
   background: url("../assets/images/spourwater.png") no-repeat center/contain;
   position: absolute;
   bottom: 0;
-  filter: drop-shadow(0 0 5px white);
   right: -10%;
+  /* filter: drop-shadow(0 0 5px white); */
   /*background-color: red; DEBUG only*/
 }
 
